--- a/groups.html
+++ b/groups.html
@@ -234,7 +234,13 @@
 </div>
 
 </div>
+<!-- return_button -->
+<div class="container">
+  <div class="div_ row">
+  <button class="return_button"> <a class="nav-link" href="index.html">&#8592; </a></button>
 
+  </div>
+</div>
 
 
 
@@ -253,7 +259,7 @@
       <div class="boxes">
         <h1 class="tittle_text">فێری زمانێ ئینگلیزی ببە <span class="text-warning">ب رێکا ئاخفتنێ</span></h1>
         <p dir="rtl" class="paragraph">د ڤێ جورێ خولێ دا ماموستا دێ پتر پاشتراستیێ ل هندێ کت کو فێرخواز باخڤت هەر ژ رۆژا دەستپێکێ و ئەگەر خو چەند پەیڤ و رستێن کێم هەبن و ل دووماهییا خولێ دێ ئاستێ وی یێ رەهوانیێ گەلەک باشتر لێئێت!</p>
-        <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+        <img src="images/4book.png" alt="" style="width:60%; margin: auto;">
         <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
   </div>
 </div>
@@ -266,7 +272,7 @@
     <div class="boxes">
       <h1 class="tittle_text">فێری زمانێ ئینگلیزی  ببە <span class="text-warning">ب شێوەیەکێ گشتی </span></h1>
       <p dir="rtl" class="paragraph">دڤێ خولێدا ماموستا دێ پشتراستیێ ل فێرخوازی کەت ب شێوەیەکێ گشتی زمانی بزانت بێ کو پتڤی کەسەکی ببت لدەمێ گەشتکرنێ و گەلەک بوارێن دیدا!</p>
-      <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/81yzzlxHYML._AC_UF1000,1000_QL80_.jpg" alt="" style="width:30%; margin: auto;">
+      <img src="images/1book.png" alt="" style="width:60%; margin: auto;">
       <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
     </div>
