--- a/index.html
+++ b/index.html
@@ -326,31 +326,14 @@
   
   
         <div class="col-4">
-          <img src="images/4.png" class="image_icon_1 img-fluid rounded-start" alt="...">
+          <img src="images/1sign.png" class="image_icon_1 img-fluid rounded-start" alt="...">
         </div>
   
   
       </div>
     </div>
   
-  
-    <div class="card  ms-lg-3 boxes_background_body reveal">
-      <div class="row align-items-center g-0 ">
-  
-        <div class="col">
-          <div class="card-body">
-            <h5 class="card-title">فێربوون ب رێکا وێنان</h5>
-            <p dir="rtl" class="card-text">د ڤێ جورێ خولێدا دێ فێرخواز فێری گەلەک پەیڤ و رستان بیت بەلێ هەمی ب شێوێ وێنەی، ئانکو هەرتشتەک دڤێ خولێدا دێ ب وێنەی ئێتە رونکرن!
-            </p>        
-            </div>
-          </div>
-  
-          <div class="col-4">
-            <img src="images/4.png" class="img-fluid rounded-start" alt="...">
-          </div>
-  
-        </div>
-    </div>
+
   
   
   
@@ -366,11 +349,41 @@
           </div>
           
           <div class="col-4 ">
-            <img src="images/4.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/2sign.png" class="img-fluid rounded-start" alt="...">
           </div>
   
       </div>
     </div>
+
+
+
+
+
+
+  
+    <div class="card  ms-lg-3 boxes_background_body reveal">
+      <div class="row align-items-center g-0 ">
+  
+        <div class="col">
+          <div class="card-body">
+            <h5 class="card-title">فێربوون ب رێکا وێنان</h5>
+            <p dir="rtl" class="card-text">د ڤێ جورێ خولێدا دێ فێرخواز فێری گەلەک پەیڤ و رستان بیت بەلێ هەمی ب شێوێ وێنەی، ئانکو هەرتشتەک دڤێ خولێدا دێ ب وێنەی ئێتە رونکرن!
+            </p>        
+            </div>
+          </div>
+  
+          <div class="col-4">
+            <img src="images/3sign.png" class="img-fluid rounded-start" alt="...">
+          </div>
+  
+        </div>
+    </div>
+
+
+
+
+
+
   
     </div>
   </div>
@@ -381,7 +394,7 @@
 
 <div class="body_boxes_btn text-center reveal">
   <div class="btn_body btn btn-sm">
-    <a class="nav-link" href="courses.html">پتر بزانە</a>
+    <a class="nav-link" href="vips.html">پتر بزانە</a>
   </div>
 </div>
 
