--- a/vips.html
+++ b/vips.html
@@ -221,6 +221,19 @@
 </div>
 
 </div>
+
+
+<!-- return_button -->
+<div class="container">
+  <div class="div_ row">
+  <button class="return_button"> <a class="nav-link" href="index.html">&#8592; </a></button>
+
+  </div>
+</div>
+
+
+
+
 <!-- course offers -->
 <!-- number 1 -->
 <div class="all_offers container  text-center ">
@@ -230,7 +243,7 @@
       <div class="boxes">
         <h1 class="tittle_text">فێری زمانێ ئینگلیزی ببە <span class="text-warning">بێ رێزمان</span></h1>
         <p dir="rtl" class="paragraph">د ڤێ جورێ خولێ دا ماموستا دێ پتر پاشتراستیێ ل هندێ کت کو فێرخواز باخڤت و ب هویربینی رێزمانێ شلوڤەناکت!</p>
-        <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/81yzzlxHYML._AC_UF1000,1000_QL80_.jpg" alt="" style="width:30%; margin: auto;">
+        <img src="images/1book.png" alt="" style="width:60%; margin: auto;">
         <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
       </div>
   </div>
@@ -243,7 +256,7 @@
     <div class="boxes">
       <h1 class="tittle_text">فێری زمانێ ئینگلیزی ب رێکا <span class="text-warning">ب کارئینانا رێزمانێ</span></h1>
       <p dir="rtl" class="paragraph">دڤێ خولێدا ماموستا دێ پشتراستیێ ل فێرخوازی کت کو فێری زمانێ ببت و دگەل دا رێزمانێ ژی ب هویربینی بزانت!</p>
-      <img src="https://www.cambridge.es/var/ezdemo_site/storage/images/media/images/covers/gram-vocab-and-pron/grammar/egu5/98330-1-esl-ES/egu5.jpg" alt="" style="width:30%; margin: auto;">
+      <img src="images/2book.png" alt="" style="width:60%; margin: auto;">
       <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
@@ -256,7 +269,7 @@
     <div class="boxes">
       <h1 class="tittle_text">فێربوون <span class="text-warning">برێکا پەیڤان و وێنان</span></h1>
       <p dir="rtl" class="paragraph">د ڤێ جورێ خولێدا دێ ماموستاپتر پاشتراستیێ ل پەیڤان کەت و پشتی فێرخواز ڤێ خولێ ب دووماهی بینت دێ گەنجینەکا مەزن هەبت ژ پەیڤان!</p>
-      <img src="https://cdn3.kobisi.com/image/3826/4784857/1/768/1366/4000-essential-english-words-1-2-3-4-5-6-cd-roms.jpg?v=1609942140" alt="" style="width:40%; margin: auto;">
+      <img src="images/3book.png" alt="" style="width:80%; margin: auto;">
       <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
@@ -269,7 +282,7 @@
     <div class="boxes">
       <h1 class="tittle_text">فێربوونا <span class="text-warning">شارەزاییان جودا جودا</span></h1>
       <p dir="rtl" class="paragraph">د ڤێ جورێ خولێدا دێ ماموستاپتر پاشتراستیێ ل ئێك شارەزایێ بتنێ کت، ئانکو قوتابیێ دێ ئێك شارەزایێ هەلبژێرت و ماموستا دێ بتنێ وێ شارەزایێ پێشئێخت، مە چار شارەزایێن زمانێ ئینگلیزی هەنە، خاندن، ئاخفتن، نڤێسین، و گوهدان!</p>
-      <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+      <img src="images/4book.png" alt="" style="width:60%; margin: auto;">
       <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
