--- a/jagar.html
+++ b/jagar.html
@@ -280,7 +280,7 @@
 <!-- footer -->
 <div class="fluid text-center">
   <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="images/4.png" alt=""></a>
-  <div class="user-select-none text-dark">
+  <div class="copy_right user-select-none text-dark">
     Copy Right &copy; Ahmed Avdal Shereef
   </div>
 <div id="bottom" class="title_footer text-dark fw-bold mb-3">
